--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,24 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-# spring.datasource.username=username
-# spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2Console
+
+# Datasource
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
+# Show or not log for each sql query
+spring.jpa.show-sql=true
+
+# Enable data.sql initialization
+spring.sql.init.mode=always
+
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto=create
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# Ensure Hibernate schema initialization happens before data.sql
+spring.jpa.defer-datasource-initialization=true
